# trove-imgui

./: .gitignore  CMakeLists.txt  __clang-format-copy  cpp_reformat.py  e_kill.bat  file_extensions_list_generator.py  mct_project_info.json  py_build.py  renamer.py  requirements.txt  style_serialization_generator.py  vlc-help.txt
src/cpp/: CMakeLists.txt  main.cpp  main.h  playback_test.cpp  vlc_test.cpp
src/cpp/playback/: CMakeLists.txt  video_buffer.cpp  video_buffer.h  video_render.cpp  video_render.h
src/cpp/python/: CMakeLists.txt  init.cpp  init.h  py_main.cpp  py_main.h  py_module.cpp
src/cpp/ui/: CMakeLists.txt  core.h  main_menu_bar.cpp  main_menu_bar.h  main_window.cpp  main_window.h  movie_pane.cpp  movie_pane.h  style_editor.cpp  style_editor.h
src/cpp/ui/base/: fragment.cpp  fragment.h
src/cpp/ui/components/: CMakeLists.txt  player.cpp  player.h
src/cpp/ui/sub_windows/: CMakeLists.txt  py_console.cpp  py_console.h  style_editor.cpp  style_editor.h
src/py/: debug.py  hello.py  main.py  std_handler.py  style_helper.py
src/py/db/: __init__.py
src/py/db/tables/: __init__.py  asset.py  employee.py  equipment.py  job_site.py  video.py
src/py/lib_trove/: __init__.py  vlc_telnet.py
src/py/lib_trove/config/: __init__.py
src/py/lib_trove/db/: __init__.py
src/py/lib_trove/db/tables/: __init__.py  video.py
src/py/lib_trove/scanning/: __init__.py  vlc_known_extensions.json
src/py/scanners/: __init__.py
src/py/scanning/: __init__.py
src/py/settings/: __init__.py
stubs/: imgui_style.py
